objects/MaritzCX__Survey_Response__c.object
<CustomObject>
    <fields>
        <fullName>MaritzCX__ALG_Response_Id__c</fullName>
        <externalId>true</externalId>
        <label>ALG Response Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>MaritzCX__ALG_Survey_Id__c</fullName>
        <externalId>true</externalId>
        <label>ALG Survey Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MaritzCX__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup field for Account</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>MaritzCX Responses</relationshipLabel>
        <relationshipName>Allegiance_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MaritzCX__Case_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>MaritzCX Response</relationshipLabel>
        <relationshipName>Survey_Response</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MaritzCX__Comments_10__c</fullName>
        <label>Comments 10</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MaritzCX__Comments_11__c</fullName>
        <label>Comments 11</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MaritzCX__Comments_12__c</fullName>
        <label>Comments 12</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MaritzCX__Contact_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>MaritzCX Responses</relationshipLabel>
        <relationshipName>Allegiance_Survey_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MaritzCX__Key_Metric_10_Bar__c</fullName>
        <formula>/* Note: Open in edit mode, copy formula on Notepad++ and remove word-wrap for better visibility */ 

/* if key metric values is within range then show charts */ 
IF( (MaritzCX__Key_Metric_10__c &lt;= MaritzCX__Survey_Id__r.MaritzCX__KM10_Max__c) &amp;&amp; (MaritzCX__Key_Metric_10__c &gt;= MaritzCX__Survey_Id__r.MaritzCX__KM10_Min__c), 

/* If 100 &gt;= percentage &gt; range-2 then show configured color-3 */ 
IF((MaritzCX__Key_Metric_10__c - MaritzCX__Survey_Id__r.MaritzCX__KM10_Min__c) / (MaritzCX__Survey_Id__r.MaritzCX__KM10_Max__c - MaritzCX__Survey_Id__r.MaritzCX__KM10_Min__c) * 100 &gt; $Setup.MaritzCX__ALG_Metric__c.MaritzCX__Range2__c, 
IMAGE( 
&quot;/resource/&quot; + IF(ISBLANK($Setup.MaritzCX__AlPublic__c.MaritzCX__NamespacePrefix__c), &quot;&quot;, $Setup.MaritzCX__AlPublic__c.MaritzCX__NamespacePrefix__c + &quot;__&quot;) + &quot;colors/&quot; + $Setup.MaritzCX__ALG_Metric__c.MaritzCX__Color3__c + &quot;.png&quot;, 
SUBSTITUTE($Setup.MaritzCX__ALG_Metric__c.MaritzCX__Color3__c, &quot;_img&quot;, &quot;&quot;), 
15, 
(MaritzCX__Key_Metric_10__c - MaritzCX__Survey_Id__r.MaritzCX__KM10_Min__c) / (MaritzCX__Survey_Id__r.MaritzCX__KM10_Max__c - MaritzCX__Survey_Id__r.MaritzCX__KM10_Min__c) * 80 
) &amp; &quot;&quot;, 

/* if range2 &gt;= percentage &gt; range-1 then show configured color-2 */ 
IF((MaritzCX__Key_Metric_10__c - MaritzCX__Survey_Id__r.MaritzCX__KM10_Min__c) / (MaritzCX__Survey_Id__r.MaritzCX__KM10_Max__c - MaritzCX__Survey_Id__r.MaritzCX__KM10_Min__c) * 100 &gt; $Setup.MaritzCX__ALG_Metric__c.MaritzCX__Range1__c, 
IMAGE( 
&quot;/resource/&quot; + IF(ISBLANK($Setup.MaritzCX__AlPublic__c.MaritzCX__NamespacePrefix__c), &quot;&quot;, $Setup.MaritzCX__AlPublic__c.MaritzCX__NamespacePrefix__c + &quot;__&quot;) + &quot;colors/&quot; + $Setup.MaritzCX__ALG_Metric__c.MaritzCX__Color2__c + &quot;.png&quot;, 
SUBSTITUTE($Setup.MaritzCX__ALG_Metric__c.MaritzCX__Color2__c, &quot;_img&quot;, &quot;&quot;), 
15, 
(MaritzCX__Key_Metric_10__c - MaritzCX__Survey_Id__r.MaritzCX__KM10_Min__c) / (MaritzCX__Survey_Id__r.MaritzCX__KM10_Max__c - MaritzCX__Survey_Id__r.MaritzCX__KM10_Min__c) * 80 
), 
/* else range2 &gt;= percentage &gt; 0 show configured color-1 */ 
IMAGE( 
&quot;/resource/&quot; + IF(ISBLANK($Setup.MaritzCX__AlPublic__c.MaritzCX__NamespacePrefix__c), &quot;&quot;, $Setup.MaritzCX__AlPublic__c.MaritzCX__NamespacePrefix__c + &quot;__&quot;) + &quot;colors/&quot; + $Setup.MaritzCX__ALG_Metric__c.MaritzCX__Color1__c + &quot;.png&quot;, 
SUBSTITUTE($Setup.MaritzCX__ALG_Metric__c.MaritzCX__Color1__c, &quot;_img&quot;, &quot;&quot;), 
15, 
(MaritzCX__Key_Metric_10__c - MaritzCX__Survey_Id__r.MaritzCX__KM10_Min__c) / (MaritzCX__Survey_Id__r.MaritzCX__KM10_Max__c - MaritzCX__Survey_Id__r.MaritzCX__KM10_Min__c) * 80 
) 
) &amp; &quot;&quot; 
), 
/* else - key metric value is outside the min-max range then return blank */ 
&quot;&quot; 
) &amp; IF( (MaritzCX__Key_Metric_10__c &lt;= MaritzCX__Survey_Id__r.MaritzCX__KM10_Max__c) &amp;&amp; (MaritzCX__Key_Metric_10__c &gt;= MaritzCX__Survey_Id__r.MaritzCX__KM10_Min__c),IMAGE( 
&quot;/resource/&quot; + IF(ISBLANK($Setup.MaritzCX__AlPublic__c.MaritzCX__NamespacePrefix__c), &quot;&quot;, $Setup.MaritzCX__AlPublic__c.MaritzCX__NamespacePrefix__c + &quot;__&quot;) + &quot;colors/&quot; + &quot;grey_img.png&quot;, 
&quot;grey&quot;, 
15, 
80-((MaritzCX__Key_Metric_10__c - MaritzCX__Survey_Id__r.MaritzCX__KM10_Min__c) / (MaritzCX__Survey_Id__r.MaritzCX__KM10_Max__c - MaritzCX__Survey_Id__r.MaritzCX__KM10_Min__c) * 80) 
) 
&amp; &quot; &quot; &amp; TEXT(MaritzCX__Key_Metric_10__c) + &quot;/&quot; + TEXT(MaritzCX__Survey_Id__r.MaritzCX__KM10_Max__c), 
IF(ISBLANK( MaritzCX__Key_Metric_10__c ),&quot;&quot;,TEXT(MaritzCX__Key_Metric_10__c) + &quot; &quot; + $Label.maritzcx__out_of_range ))</formula>
        <label>Key Metric 10</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MaritzCX__Key_Metric_10__c</fullName>
        <label>Key Metric 10</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MaritzCX__Key_Metric_11_Bar__c</fullName>
        <formula>/* Note: Open in edit mode, copy formula on Notepad++ and remove word-wrap for better visibility */ 

/* if key metric values is within range then show charts */ 
IF( (MaritzCX__Key_Metric_11__c &lt;= MaritzCX__Survey_Id__r.MaritzCX__KM11_Max__c) &amp;&amp; (MaritzCX__Key_Metric_11__c &gt;= MaritzCX__Survey_Id__r.MaritzCX__KM11_Min__c), 

/* If 100 &gt;= percentage &gt; range-2 then show configured color-3 */ 
IF((MaritzCX__Key_Metric_11__c - MaritzCX__Survey_Id__r.MaritzCX__KM11_Min__c) / (MaritzCX__Survey_Id__r.MaritzCX__KM11_Max__c - MaritzCX__Survey_Id__r.MaritzCX__KM11_Min__c) * 100 &gt; $Setup.MaritzCX__ALG_Metric__c.MaritzCX__Range2__c, 
IMAGE( 
&quot;/resource/&quot; + IF(ISBLANK($Setup.MaritzCX__AlPublic__c.MaritzCX__NamespacePrefix__c), &quot;&quot;, $Setup.MaritzCX__AlPublic__c.MaritzCX__NamespacePrefix__c + &quot;__&quot;) + &quot;colors/&quot; + $Setup.MaritzCX__ALG_Metric__c.MaritzCX__Color3__c + &quot;.png&quot;, 
SUBSTITUTE($Setup.MaritzCX__ALG_Metric__c.MaritzCX__Color3__c, &quot;_img&quot;, &quot;&quot;), 
15, 
(MaritzCX__Key_Metric_11__c - MaritzCX__Survey_Id__r.MaritzCX__KM11_Min__c) / (MaritzCX__Survey_Id__r.MaritzCX__KM11_Max__c - MaritzCX__Survey_Id__r.MaritzCX__KM11_Min__c) * 80 
) &amp; &quot;&quot;, 

/* if range2 &gt;= percentage &gt; range-1 then show configured color-2 */ 
IF((MaritzCX__Key_Metric_11__c - MaritzCX__Survey_Id__r.MaritzCX__KM11_Min__c) / (MaritzCX__Survey_Id__r.MaritzCX__KM11_Max__c - MaritzCX__Survey_Id__r.MaritzCX__KM11_Min__c) * 100 &gt; $Setup.MaritzCX__ALG_Metric__c.MaritzCX__Range1__c, 
IMAGE( 
&quot;/resource/&quot; + IF(ISBLANK($Setup.MaritzCX__AlPublic__c.MaritzCX__NamespacePrefix__c), &quot;&quot;, $Setup.MaritzCX__AlPublic__c.MaritzCX__NamespacePrefix__c + &quot;__&quot;) + &quot;colors/&quot; + $Setup.MaritzCX__ALG_Metric__c.MaritzCX__Color2__c + &quot;.png&quot;, 
SUBSTITUTE($Setup.MaritzCX__ALG_Metric__c.MaritzCX__Color2__c, &quot;_img&quot;, &quot;&quot;), 
15, 
(MaritzCX__Key_Metric_11__c - MaritzCX__Survey_Id__r.MaritzCX__KM11_Min__c) / (MaritzCX__Survey_Id__r.MaritzCX__KM11_Max__c - MaritzCX__Survey_Id__r.MaritzCX__KM11_Min__c) * 80 
), 
/* else range2 &gt;= percentage &gt; 0 show configured color-1 */ 
IMAGE( 
&quot;/resource/&quot; + IF(ISBLANK($Setup.MaritzCX__AlPublic__c.MaritzCX__NamespacePrefix__c), &quot;&quot;, $Setup.MaritzCX__AlPublic__c.MaritzCX__NamespacePrefix__c + &quot;__&quot;) + &quot;colors/&quot; + $Setup.MaritzCX__ALG_Metric__c.MaritzCX__Color1__c + &quot;.png&quot;, 
SUBSTITUTE($Setup.MaritzCX__ALG_Metric__c.MaritzCX__Color1__c, &quot;_img&quot;, &quot;&quot;), 
15, 
(MaritzCX__Key_Metric_11__c - MaritzCX__Survey_Id__r.MaritzCX__KM11_Min__c) / (MaritzCX__Survey_Id__r.MaritzCX__KM11_Max__c - MaritzCX__Survey_Id__r.MaritzCX__KM11_Min__c) * 80 
) 
) &amp; &quot;&quot; 
), 
/* else - key metric value is outside the min-max range then return blank */ 
&quot;&quot; 
) &amp; IF( (MaritzCX__Key_Metric_11__c &lt;= MaritzCX__Survey_Id__r.MaritzCX__KM11_Max__c) &amp;&amp; (MaritzCX__Key_Metric_11__c &gt;= MaritzCX__Survey_Id__r.MaritzCX__KM11_Min__c),IMAGE( 
&quot;/resource/&quot; + IF(ISBLANK($Setup.MaritzCX__AlPublic__c.MaritzCX__NamespacePrefix__c), &quot;&quot;, $Setup.MaritzCX__AlPublic__c.MaritzCX__NamespacePrefix__c + &quot;__&quot;) + &quot;colors/&quot; + &quot;grey_img.png&quot;, 
&quot;grey&quot;, 
15, 
80-((MaritzCX__Key_Metric_11__c - MaritzCX__Survey_Id__r.MaritzCX__KM11_Min__c) / (MaritzCX__Survey_Id__r.MaritzCX__KM11_Max__c - MaritzCX__Survey_Id__r.MaritzCX__KM11_Min__c) * 80) 
) 
&amp; &quot; &quot; &amp; TEXT(MaritzCX__Key_Metric_11__c) + &quot;/&quot; + TEXT(MaritzCX__Survey_Id__r.MaritzCX__KM11_Max__c), 
IF(ISBLANK( MaritzCX__Key_Metric_11__c ),&quot;&quot;,TEXT(MaritzCX__Key_Metric_11__c) + &quot; &quot; + $Label.maritzcx__out_of_range ))</formula>
        <label>Key Metric 11</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MaritzCX__Key_Metric_11__c</fullName>
        <label>Key Metric 11</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MaritzCX__Key_Metric_12_Bar__c</fullName>
        <formula>/* Note: Open in edit mode, copy formula on Notepad++ and remove word-wrap for better visibility */ 

/* if key metric values is within range then show charts */ 
IF( (MaritzCX__Key_Metric_12__c &lt;= MaritzCX__Survey_Id__r.MaritzCX__KM12_Max__c) &amp;&amp; (MaritzCX__Key_Metric_12__c &gt;= MaritzCX__Survey_Id__r.MaritzCX__KM12_Min__c), 

/* If 100 &gt;= percentage &gt; range-2 then show configured color-3 */ 
IF((MaritzCX__Key_Metric_12__c - MaritzCX__Survey_Id__r.MaritzCX__KM12_Min__c) / (MaritzCX__Survey_Id__r.MaritzCX__KM12_Max__c - MaritzCX__Survey_Id__r.MaritzCX__KM12_Min__c) * 100 &gt; $Setup.MaritzCX__ALG_Metric__c.MaritzCX__Range2__c, 
IMAGE( 
&quot;/resource/&quot; + IF(ISBLANK($Setup.MaritzCX__AlPublic__c.MaritzCX__NamespacePrefix__c), &quot;&quot;, $Setup.MaritzCX__AlPublic__c.MaritzCX__NamespacePrefix__c + &quot;__&quot;) + &quot;colors/&quot; + $Setup.MaritzCX__ALG_Metric__c.MaritzCX__Color3__c + &quot;.png&quot;, 
SUBSTITUTE($Setup.MaritzCX__ALG_Metric__c.MaritzCX__Color3__c, &quot;_img&quot;, &quot;&quot;), 
15, 
(MaritzCX__Key_Metric_12__c - MaritzCX__Survey_Id__r.MaritzCX__KM12_Min__c) / (MaritzCX__Survey_Id__r.MaritzCX__KM12_Max__c - MaritzCX__Survey_Id__r.MaritzCX__KM12_Min__c) * 80 
) &amp; &quot;&quot;, 

/* if range2 &gt;= percentage &gt; range-1 then show configured color-2 */ 
IF((MaritzCX__Key_Metric_12__c - MaritzCX__Survey_Id__r.MaritzCX__KM12_Min__c) / (MaritzCX__Survey_Id__r.MaritzCX__KM12_Max__c - MaritzCX__Survey_Id__r.MaritzCX__KM12_Min__c) * 100 &gt; $Setup.MaritzCX__ALG_Metric__c.MaritzCX__Range1__c, 
IMAGE( 
&quot;/resource/&quot; + IF(ISBLANK($Setup.MaritzCX__AlPublic__c.MaritzCX__NamespacePrefix__c), &quot;&quot;, $Setup.MaritzCX__AlPublic__c.MaritzCX__NamespacePrefix__c + &quot;__&quot;) + &quot;colors/&quot; + $Setup.MaritzCX__ALG_Metric__c.MaritzCX__Color2__c + &quot;.png&quot;, 
SUBSTITUTE($Setup.MaritzCX__ALG_Metric__c.MaritzCX__Color2__c, &quot;_img&quot;, &quot;&quot;), 
15, 
(MaritzCX__Key_Metric_12__c - MaritzCX__Survey_Id__r.MaritzCX__KM12_Min__c) / (MaritzCX__Survey_Id__r.MaritzCX__KM12_Max__c - MaritzCX__Survey_Id__r.MaritzCX__KM12_Min__c) * 80 
), 
/* else range2 &gt;= percentage &gt; 0 show configured color-1 */ 
IMAGE( 
&quot;/resource/&quot; + IF(ISBLANK($Setup.MaritzCX__AlPublic__c.MaritzCX__NamespacePrefix__c), &quot;&quot;, $Setup.MaritzCX__AlPublic__c.MaritzCX__NamespacePrefix__c + &quot;__&quot;) + &quot;colors/&quot; + $Setup.MaritzCX__ALG_Metric__c.MaritzCX__Color1__c + &quot;.png&quot;, 
SUBSTITUTE($Setup.MaritzCX__ALG_Metric__c.MaritzCX__Color1__c, &quot;_img&quot;, &quot;&quot;), 
15, 
(MaritzCX__Key_Metric_12__c - MaritzCX__Survey_Id__r.MaritzCX__KM12_Min__c) / (MaritzCX__Survey_Id__r.MaritzCX__KM12_Max__c - MaritzCX__Survey_Id__r.MaritzCX__KM12_Min__c) * 80 
) 
) &amp; &quot;&quot; 
), 
/* else - key metric value is outside the min-max range then return blank */ 
&quot;&quot; 
) &amp; IF( (MaritzCX__Key_Metric_12__c &lt;= MaritzCX__Survey_Id__r.MaritzCX__KM12_Max__c) &amp;&amp; (MaritzCX__Key_Metric_12__c &gt;= MaritzCX__Survey_Id__r.MaritzCX__KM12_Min__c),IMAGE( 
&quot;/resource/&quot; + IF(ISBLANK($Setup.MaritzCX__AlPublic__c.MaritzCX__NamespacePrefix__c), &quot;&quot;, $Setup.MaritzCX__AlPublic__c.MaritzCX__NamespacePrefix__c + &quot;__&quot;) + &quot;colors/&quot; + &quot;grey_img.png&quot;, 
&quot;grey&quot;, 
15, 
80-((MaritzCX__Key_Metric_12__c - MaritzCX__Survey_Id__r.MaritzCX__KM12_Min__c) / (MaritzCX__Survey_Id__r.MaritzCX__KM12_Max__c - MaritzCX__Survey_Id__r.MaritzCX__KM12_Min__c) * 80) 
) 
&amp; &quot; &quot; &amp; TEXT(MaritzCX__Key_Metric_12__c) + &quot;/&quot; + TEXT(MaritzCX__Survey_Id__r.MaritzCX__KM12_Max__c), 
IF(ISBLANK( MaritzCX__Key_Metric_12__c ),&quot;&quot;,TEXT(MaritzCX__Key_Metric_12__c) + &quot; &quot; + $Label.maritzcx__out_of_range ))</formula>
        <label>Key Metric 12</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MaritzCX__Key_Metric_12__c</fullName>
        <label>Key Metric 12</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MaritzCX__Lead_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>MaritzCX Responses</relationshipLabel>
        <relationshipName>Survey_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MaritzCX__Metric_100__c</fullName>
        <label>Metric 100</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MaritzCX__Metric_101__c</fullName>
        <label>Metric 101</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MaritzCX__Metric_102__c</fullName>
        <label>Metric 102</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MaritzCX__Respondent_State__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Abandoned</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>InProgress</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MaritzCX__Response_Completed_Date__c</fullName>
        <label>Response Completed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MaritzCX__Response_View_Link__c</fullName>
        <formula>IF(MaritzCX__Survey_Id__r.MaritzCX__Allegiance_Survey_Response_View_Link__c == true &amp;&amp; NOT(ISNULL(MaritzCX__ALG_Response_Id__c)),
HYPERLINK(
&quot;/apex/&quot; +
$Setup.MaritzCX__AlPublic__c.MaritzCX__NamespacePrefix__c + 
IF( ISBLANK($Setup.MaritzCX__AlPublic__c.MaritzCX__NamespacePrefix__c), &apos;&apos;, &apos;__&apos;) + 
&quot;ViewResponsePage?Id=&quot; + TEXT(MaritzCX__ALG_Response_Id__c),
&quot;View Response&quot;,
&quot;_blank&quot;
),&apos;&apos;)</formula>
        <label>View Response</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MaritzCX__Survey_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Survey</label>
        <referenceTo>MaritzCX__Survey__c</referenceTo>
        <relationshipLabel>MaritzCX Responses</relationshipLabel>
        <relationshipName>Survey_Response</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MaritzCX__respondent_email__c</fullName>
        <label>Unique Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Training_Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created lookup to show the Maritz survey related list under Training Event object, DPS-20245</description>
        <label>Training Event</label>
        <referenceTo>Training_Event__c</referenceTo>
        <relationshipLabel>Maritz Survey Results</relationshipLabel>
        <relationshipName>Survey_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>MaritzCX Response</label>
    <listViews>
        <fullName>MaritzCX__All</fullName>
        <columns>NAME</columns>
        <columns>MaritzCX__Contact_Id__c</columns>
        <columns>MaritzCX__Key_Metric_1_Bar__c</columns>
        <columns>MaritzCX__Key_Metric_2_Bar__c</columns>
        <columns>MaritzCX__Key_Metric_3_Bar__c</columns>
        <columns>MaritzCX__Key_Metric_4_Bar__c</columns>
        <columns>MaritzCX__Key_Metric_5_Bar__c</columns>
        <columns>MaritzCX__Metric_1__c</columns>
        <columns>MaritzCX__Metric_2__c</columns>
        <columns>MaritzCX__Comments_1__c</columns>
        <columns>MaritzCX__Comments_2__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Survey Response</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Survey Responses</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>